[gd_scene load_steps=12 format=3 uid="uid://clpd4aclajqmd"]

[ext_resource type="Script" path="res://scripts/tracker.gd" id="1_2oy2a"]
[ext_resource type="FontFile" uid="uid://q0n4smkjtegn" path="res://assets/fonts/Coolvetica Rg.otf" id="1_bfym8"]
[ext_resource type="Texture2D" uid="uid://3ifiv02skdch" path="res://assets/tracker/arrow-left.svg" id="1_ocy8l"]
[ext_resource type="PackedScene" uid="uid://cck06yd7oq6v8" path="res://scenes/bg.tscn" id="2_fpjmt"]
[ext_resource type="Texture2D" uid="uid://gdd0xp8yyutk" path="res://assets/tracker/dots-three-vertical-bold.svg" id="3_dcoxp"]
[ext_resource type="Texture2D" uid="uid://botqd7v430qv0" path="res://assets/tracker/plus.svg" id="5_2oy2a"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2oy2a"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_k524b"]
content_margin_top = 30.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rep8v"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2oy2a"]
bg_color = Color(0, 0.313726, 0.270588, 1)
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k524b"]
bg_color = Color(0, 0.407336, 0.353246, 1)
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40

[node name="Tracker" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2oy2a")

[node name="BG" parent="." instance=ExtResource("2_fpjmt")]
layout_mode = 1

[node name="Title" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -498.0
offset_right = 538.0
offset_bottom = 186.0
grow_horizontal = 2

[node name="Back" type="TextureButton" parent="Title"]
layout_mode = 2
size_flags_vertical = 4
texture_normal = ExtResource("1_ocy8l")

[node name="TitleText" type="LineEdit" parent="Title"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("1_bfym8")
theme_override_font_sizes/font_size = 100
theme_override_styles/focus = SubResource("StyleBoxEmpty_2oy2a")
theme_override_styles/normal = SubResource("StyleBoxEmpty_k524b")
placeholder_text = "Daily Agenda"
alignment = 1
expand_to_text_length = true

[node name="3-dots" type="TextureButton" parent="Title"]
layout_mode = 2
texture_normal = ExtResource("3_dcoxp")
stretch_mode = 5

[node name="Tasks" type="ScrollContainer" parent="."]
custom_minimum_size = Vector2(0, 1300)
layout_mode = 2
offset_left = 80.0
offset_top = 210.0
offset_right = 1000.0
offset_bottom = 1510.0
horizontal_scroll_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="Tasks"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 280

[node name="Completed" type="RichTextLabel" parent="."]
layout_mode = 2
offset_left = 80.0
offset_top = 1514.0
offset_right = 1000.0
offset_bottom = 1671.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.3
theme_override_colors/default_color = Color(0, 0.870588, 0.756863, 1)
theme_override_fonts/normal_font = ExtResource("1_bfym8")
theme_override_font_sizes/normal_font_size = 64
text = "Completed"

[node name="FinishedTasks" type="ScrollContainer" parent="."]
custom_minimum_size = Vector2(0, 300)
layout_mode = 2
offset_left = 80.0
offset_top = 1675.0
offset_right = 1000.0
offset_bottom = 2199.0
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="FinishedTasks"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 275

[node name="AddButtonCanvasLayer" type="CanvasLayer" parent="."]

[node name="AddTask" type="Button" parent="AddButtonCanvasLayer"]
modulate = Color(0, 0.996078, 0.866667, 1)
offset_left = 882.0
offset_top = 2216.0
offset_right = 1030.0
offset_bottom = 2353.0
size_flags_horizontal = 3
theme_override_styles/focus = SubResource("StyleBoxEmpty_rep8v")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_2oy2a")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_2oy2a")
theme_override_styles/hover = SubResource("StyleBoxFlat_k524b")
theme_override_styles/pressed = SubResource("StyleBoxFlat_2oy2a")
theme_override_styles/normal = SubResource("StyleBoxFlat_2oy2a")
icon = ExtResource("5_2oy2a")
icon_alignment = 1

[connection signal="pressed" from="Title/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="AddButtonCanvasLayer/AddTask" to="." method="_on_add_task_pressed"]
